--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 </span>
                 <button type="button" class="btn btn-outline-light m-1"id="boton-orador" > Quiero ser orador </button>
-                <button type="button" class="btn btn-success" id="boton">Comprar tickets</button>
+                <a href="./CompraTickes.html"><button type="button" class="btn btn-success" id="boton"> Comprar tickets </button></a>  
 
             </span>
             
